--- a/src/app/components/therapist/therapist.component.html
+++ b/src/app/components/therapist/therapist.component.html
@@ -1,1 +1,4 @@
-<p>therapist works!</p>
+<div class="user-area">
+  <span class="surname">{{user.surname}}</span>
+  <span class="name">{{ user.name }}</span>
+</div>
