--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
-.mat-toolbar {
-  --mat-toolbar-container-background-color: transparent;
-  border-bottom: 1px solid #cccccc;
-  border-radius: 12px;
+.title {
+  padding: 24px;
+  margin: 0;
+  width: fit-content;
 }
