--- a/src/app/components/patient/patient.component.scss
+++ b/src/app/components/patient/patient.component.scss
@@ -1,4 +1,43 @@
+:host {
+  display: flex;
+  width: 100%;
+}
+
 .label {
   font-size: 16px;
   font-weight: 500;
+}
+
+.questions {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto 24px;
+  max-width: 60%;
+  max-height: 80%;
+
+  .question {
+    font-size: 16px;
+    margin: 12px 0;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #16bdff;
+    border-radius: 15px;
+
+    label {
+      margin: 12px 6px 6px 12px;
+    }
+
+    mat-slider {
+      margin-bottom: 6px;
+    }
+  }
+
+  .info {
+    padding: 12px;
+    border: 1px solid orange;
+    border-radius: 16px;
+    background-color: #ffa50021;
+    font-size: 16px;
+  }
+
 }
