--- a/src/app/components/doctor/doctor.component.scss
+++ b/src/app/components/doctor/doctor.component.scss
@@ -20,4 +20,9 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
+  padding: 10px;
+  border-bottom: 1px solid #e0e0e0;
+  &:last-child {
+    border-bottom: none;
+  }
 }
