--- a/src/app/components/doctor/doctor.component.html
+++ b/src/app/components/doctor/doctor.component.html
@@ -1,38 +1,123 @@
 <app-user-area [user]="user">
-  <span>
-    <span class="label">Specialization: </span>
-    {{ user["specialization"] }}
-  </span>
+  <span class="specialization"><mat-icon class="material-symbols-outlined">orthopedics</mat-icon>
+  {{ user["specialization"] }}</span>
 </app-user-area>
-<div class="patients">
-  <h2>Patients assigned to you</h2>
-  <mat-accordion>
-    @for (patient of patients$ | async; track patient.id) {
-      <mat-expansion-panel [disabled]="!isPatientScored(patient.id)">
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            {{ patient.surname }} {{ patient.name }}
-          </mat-panel-title>
-          <mat-panel-description>
-            @if (isPatientScored(patient.id)) {
-              <span>Avg score: </span>
-              <span>{{ getPatientAvgScore(patient.id) }}</span>
-            } @else {
-              <span>Patient has not sent any replies yet</span>
-            }
-          </mat-panel-description>
-        </mat-expansion-panel-header>
-        @if (isPatientScored(patient.id)) {
-          @for (answer of getPatientAnswers(patient.id); track answer.id) {
-            <a [routerLink]="['answers', answer.id]" class="result">
-              <span>{{ answer.date | date }}</span>
-              <span>Score: {{ answer.score }}</span>
-            </a>
+<div class="patients-container">
+  <h2>
+    <span>Patients assigned to you</span>
+    <mat-divider/>
+  </h2>
+  <mat-tab-group class="patients-group">
+    <mat-tab label="Wszyscy" class="inactive">
+      <div class="patients">
+        <mat-accordion>
+          @for (patient of patients$ | async; track patient.id) {
+            <mat-expansion-panel [disabled]="!isPatientScored(patient.id)">
+              <mat-expansion-panel-header>
+                <mat-panel-title>
+                  {{ patient.surname }} {{ patient.name }}
+                </mat-panel-title>
+                <mat-panel-description>
+                  @if (isPatientScored(patient.id)) {
+                    <span>Last score: </span>
+                    <span>{{ getPatientLastScore(patient.id) }}</span>
+                  } @else {
+                    <span>Patient has not sent any replies yet</span>
+                  }
+                </mat-panel-description>
+              </mat-expansion-panel-header>
+              @if (isPatientScored(patient.id)) {
+                @for (answer of getPatientAnswers(patient.id); track answer.id) {
+                  <a [routerLink]="['answers', answer.id]" class="result">
+                    <span>{{ answer.date | date }}</span>
+                    <span>Score: {{ answer.score }}</span>
+                  </a>
+                }
+              }
+            </mat-expansion-panel>
+          } @empty {
+            <span>You have no assigned patients yet</span>
           }
-        }
-      </mat-expansion-panel>
-    } @empty {
-      <span>You have no assigned patients yet</span>
-    }
-  </mat-accordion>
+        </mat-accordion>
+      </div>
+    </mat-tab>
+    <mat-tab label="Zakwalifikowani">
+      <div class="patients">
+        <mat-accordion>
+          @for (patient of patients$ | async; track patient.id) {
+            @if (isPatientQualified(patient.id)) {
+              <mat-expansion-panel [disabled]="!isPatientScored(patient.id)">
+                <mat-expansion-panel-header>
+                  <mat-panel-title>
+                    {{ patient.surname }} {{ patient.name }}
+                  </mat-panel-title>
+                  <mat-panel-description>
+                    @if (isPatientScored(patient.id)) {
+                      <span>Last score: </span>
+                      <span>{{ getPatientLastScore(patient.id) }}</span>
+                    } @else {
+                      <span>Patient has not sent any replies yet</span>
+                    }
+                  </mat-panel-description>
+                </mat-expansion-panel-header>
+                @if (isPatientScored(patient.id)) {
+                  @for (answer of getPatientAnswers(patient.id); track answer.id) {
+                    <a [routerLink]="['answers', answer.id]" class="result">
+                      <span>{{ answer.date | date }}</span>
+                      <span>Score: {{ answer.score }}</span>
+                    </a>
+                  }
+                }
+              </mat-expansion-panel>
+            }
+          } @empty {
+            <span>You have no assigned patients yet</span>
+          }
+        </mat-accordion>
+      </div>
+    </mat-tab>
+    <mat-tab label="Niezakwalifikowani">
+      <div class="patients">
+        <mat-accordion>
+          @for (patient of patients$ | async; track patient.id) {
+            @if (!isPatientQualified(patient.id)) {
+              <mat-expansion-panel [disabled]="!isPatientScored(patient.id)">
+                <mat-expansion-panel-header>
+                  <mat-panel-title>
+                    {{ patient.surname }} {{ patient.name }}
+                  </mat-panel-title>
+                  <mat-panel-description>
+                    @if (isPatientScored(patient.id)) {
+                      <div class="patients-description">
+                      <span>Last form:
+                      <span>{{ getPatientLastAnswer(patient.id)?.date | date }}</span>
+                      </span>
+                        <span>Last score:
+                      <span>{{ getPatientLastScore(patient.id) }}</span>
+                      </span>
+                      </div>
+                    } @else {
+                      <span>Patient has not sent any replies yet</span>
+                    }
+                  </mat-panel-description>
+                </mat-expansion-panel-header>
+                @if (isPatientScored(patient.id)) {
+                  @for (answer of getPatientAnswers(patient.id); track answer.id; let i = $index) {
+                    <a [routerLink]="['answers', answer.id]" class="result">
+                      <span>{{ getPatientAnswers(patient.id).length - i }}</span>
+                      <span>{{ answer.date | date }}</span>
+                      <span>Score: {{ answer.score }}</span>
+                    </a>
+                  }
+                }
+              </mat-expansion-panel>
+            }
+          } @empty {
+            <span>You have no assigned patients yet</span>
+          }
+        </mat-accordion>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
 </div>
+
