--- a/src/app/components/doctor/doctor.component.scss
+++ b/src/app/components/doctor/doctor.component.scss
@@ -13,7 +13,22 @@
   flex-direction: column;
   margin: 0 auto 24px;
   max-height: 80%;
-  width: 70%;
+  padding: 12px;
+
+
+  a {
+    text-decoration: none;
+    color: #000;
+    background-color: transparent;
+    transition: background-color .3s;
+    border-radius: 8px;
+
+
+    &:hover {
+      background-color: rgba(22, 189, 255, 0.25);
+    }
+
+  }
 }
 
 .result {
@@ -22,7 +37,48 @@
   width: 100%;
   padding: 10px;
   border-bottom: 1px solid #e0e0e0;
+
   &:last-child {
     border-bottom: none;
   }
 }
+
+.patients-group {
+  //width: 70%;
+}
+
+.patients-description {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+
+}
+
+.patients-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
+  h2 {
+    margin-right: 12px;
+
+    span {
+      padding-top: 10px;
+    }
+  }
+}
+
+.specialization {
+  display: flex;
+  font-size: 18px;
+}
+
+//::ng-deep .mat-mdc-tab-group {
+//  .inactive {
+//    .mat-mdc-tab-nav-bar {
+//      --mdc-tab-indicator-active-indicator-color: #000;
+//      --mat-tab-header-active-hover-indicator-color: #000;
+//    }
+//
+//  }
+//}
