--- a/src/app/components/patient/patient.component.scss
+++ b/src/app/components/patient/patient.component.scss
@@ -22,6 +22,7 @@
     flex-direction: column;
     border: 1px solid #16bdff;
     border-radius: 15px;
+    padding: 12px;
 
     label {
       margin: 12px 6px 6px 12px;
