--- a/src/app/components/user-area/user-area.component.html
+++ b/src/app/components/user-area/user-area.component.html
@@ -1,33 +1,46 @@
-<div class="user-area">
-  <mat-icon class="material-symbols-outlined icon" [matTooltip]="user.role" [matTooltipPosition]="'above'">
-    @switch (user.role) {
-      @case (UserRole.Doctor) {
-        <span>account_circle</span>
-      }
-      @case (UserRole.Patient) {
-        <span>person</span>
-      }
-    }
-  </mat-icon>
+<div class="user-area" [ngClass]="{'user-area__patient' : user.role === UserRole.Patient}">
+  <!--  <mat-icon class="material-symbols-outlined icon" [matTooltip]="user.role" [matTooltipPosition]="'above'">-->
+  <!--    @switch (user.role) {-->
+  <!--      @case (UserRole.Doctor) {-->
+  <!--        <span>account_circle</span>-->
+  <!--      }-->
+  <!--      @case (UserRole.Patient) {-->
+  <!--        <span>person</span>-->
+  <!--      }-->
+  <!--    }-->
+  <!--  </mat-icon>-->
+  <img class="profile-image"
+       src="{{ user.role === UserRole.Doctor ? 'assets/images/doctor.png' : 'assets/images/patient.png' }}"
+       alt="User icon">
   <div class="user-area__prim-info">
-    <span class="role">
-      @switch (user.role) {
-        @case (UserRole.Doctor) {
-          <span>Doctor</span>
-        }
-        @case (UserRole.Patient) {
-          <span>Patient</span>
-        }
-      }
-      <span>: </span>
+    <!--    <span class="role">-->
+    <!--      @switch (user.role) {-->
+    <!--        @case (UserRole.Doctor) {-->
+    <!--          <span>Doctor</span>-->
+    <!--        }-->
+    <!--        @case (UserRole.Patient) {-->
+    <!--          <span>Patient</span>-->
+    <!--        }-->
+    <!--      }-->
+    <!--      <span>: </span>-->
+    <!--    </span>-->
+    <span class="user-area__name">
+    @if (user.role === UserRole.Doctor) {
+      <span>Dr </span>
+    }
+      <span>{{ user.surname }} </span>
+      <span>{{ user.name }}</span>
     </span>
-    <span class="surname">{{ user.surname }}</span>
-    <span class="name">{{ user.name }}</span>
   </div>
   <div class="user-area__sec-info">
-    <ng-content />
-    <span class="id"><span class="label">Unique user ID: </span>{{ user.id }}</span>
-    <span class="email"><span class="label">Email: </span>{{ user.email }}</span>
-    <span class="phone"><span class="label">Phone: </span>{{ user.phone }}</span>
+    <ng-content/>
+    <span class="id"><span class="label">ID </span>{{ user.id }}</span>
+    <span class="contact-info">Contact info</span>
+    <span class="info-label"><mat-icon>mail</mat-icon><span>{{ user.email }}</span></span>
+    <span class="info-label"><mat-icon>phone</mat-icon><span>{{ user.phone }}</span></span>
   </div>
+  <button mat-flat-button color="primary">
+    <mat-icon>logout</mat-icon>
+    <span>Logout</span>
+  </button>
 </div>
