--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+
+}
 
 * {
   box-sizing: border-box;
 }
+
+//.mat-mdc-tab-group, .mat-mdc-tab-nav-bar {
+//  --mdc-tab-indicator-active-indicator-shape: 2px;
+//
+//  .mdc-tab-indicator__content {
+//    opacity: 1;
+//  }
+//}
+
+
