--- a/src/app/components/patient/patient.component.scss
+++ b/src/app/components/patient/patient.component.scss
@@ -42,3 +42,40 @@
   }
 
 }
+
+.all-set {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 24px;
+  padding: 56px;
+  border: 1px solid #16bdff;
+  border-radius: 12px;
+  box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.1);
+
+  h2 {
+    font-size:36px;
+    font-weight: 400;
+    margin-bottom: 10px;
+  }
+
+  p {
+    font-size: 24px;
+    font-weight: 400;
+    margin-top: 10px;
+    text-align: center;
+    line-height: 1.5;
+  }
+
+  &__icon {
+    font-size: 128px;
+    width: 128px;
+    height: 128px;
+    font-weight: 100;
+    color: rgba(22, 189, 255, 0.3);
+  }
+
+
+}
