Change title and logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<h1 class="title">Ozdrowieńcy</h1>
+<div class="header">
+  <img src="assets/images/logo.png" alt="Logo">
+  <h1 class="title">MediSurvey</h1>
+</div>
 <router-outlet></router-outlet>
