--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,15 @@
-.title {
+.header {
+  display: flex;
+  align-items: center;
   padding: 24px;
-  margin: 0;
+}
+
+.title {
+  margin: 0 0 0 10px;
   width: fit-content;
+}
+
+img {
+  width: 32px;
+  height: 32px;
 }
