--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -8,12 +8,14 @@
 
   h4 {
     margin-bottom: 20px;
+    font-size: 24px;
+    font-weight: 300;
   }
 }
 
 .content {
   width: 400px;
-  padding: 20px;
+  padding: 30px;
   border: 1px solid #ccc;
   border-radius: 15px;
 
