Improved login validation

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,7 +9,7 @@
           <mat-form-field appearance="outline">
             <input matInput type="password" placeholder="Password" formControlName="password">
           </mat-form-field>
-          <button mat-raised-button color="primary" type="submit">Login</button>
+          <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid">Login</button>
         </form>
   </div>
 </div>
