Changed avg score to score

--- a/src/app/components/answer-details/answer-details.component.html
+++ b/src/app/components/answer-details/answer-details.component.html
@@ -4,7 +4,7 @@
       <div class="general-info__date">
         <span class="general-info__label">Date of filling: </span>{{ question.date | date }}</div>
       <div class="general-info__avg">
-        <span class="general-info__label">Average score: </span>{{ question.score }}</div>
+        <span class="general-info__label">Score: </span>{{ question.score }}</div>
     </div>
     <mat-divider />
     <div class="answer-details__content" content>
